# GeoDb

./: .gitignore  README.md  _logging.py  auto_classifier.py  searchable_kernel.py  server.py  setup.py  utils.py
adam/: __init__.py  _logging.py  auto_classifier.py  auto_metric_learn.py  datasets.py  download_kmnist.py  resources.py  speaker_id.py  utils.py
adam.egg-info/: PKG-INFO  SOURCES.txt
geodbcpp/: CMakeLists.txt  PyModule.cpp  conanfile.txt  setup.py
geodbcpp/geodbcpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
geodbcpp/src/: PyModule.cpp  geodbcpp.cpp  geodbcpp.h
geodbcpp/tests/: CMakeLists.txt  main.cpp  test_geodb.cpp
manifold_browser2/manifold_browser/: manifold_browser.html  package-lock.json
notebooks/: geospeech2phone.ipynb
tests/: test_geodb_speech2phone.py
